# nodejs-rust-sample-module

./: .buildpacks  .dockerignore  .gitignore  Dockerfile  README.md  airports.js  dokku_setup.sh  index.js  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml  artifacts.json  index.node
native/src/: lib.rs
public/: index.html
